--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -2,7 +2,7 @@ html,
 body
   padding: 0
   margin: 0
-  font-family: sans-serif
+  font-family: Roboto, Arial, Helvetica, sans-serif
   background-color: #fff
 
 a
