--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -1,15 +1,137 @@
 .index
-  display: flex
-  justify-content: center
-  align-items: center
   width: 100%
   height: 100vh
-  background-color: #333
 
 // #3e047d
 
-.text
+.navBar
+  position: fixed
+  z-index: 2
+  top: 0
+  left: 0
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: space-between
+  width: 192px
+  height: 100%
+  background-color: #1B1E1F
+
+.navBar__activeLink
+  color: #E3AB10
+  text-shadow: 0.5px 0.5px 5px #E3AB10
+
+.navBar__link
+  color: #757575
+  text-shadow: none
+
+.navBar__linkWrap
+  display: flex
+  flex-direction: column
+  align-items: center
+  width: 100%
+  & > a
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 128px
+    min-height: 60px
+    font-size: 24px
+
+
+.navBar__logo
+  width: 96px
+  height: 96px
+  margin-top: 64px
+  background-color: #ccc
+
+.navBar__discordHover, .navBar__linkedInHover
+  display: flex
+  position: absolute
+  justify-content: center
+  align-items: center
+  top: -30px
+  left: 50px
+  width: 120px
+  height: 40px
+  background-color: #fff
+  border-radius: 5px
+  // font-size: 1.1em
+  transition: .3s
+  opacity: 0
+  pointer-events: none
+
+.navBar__logoWrap
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  align-items: center
+  height: 182px
+  width: 50px
+  margin-bottom: 64px
+  & > a
+    display: flex
+    justify-content: center
+    align-items: center
+    min-width: 50px
+    min-height: 50px
+    cursor: pointer
+    &:nth-of-type(1n)
+      position: relative   
+  & > a:nth-of-type(1):hover .navBar__discordHover
+    opacity: 1
+    pointer-events: auto
+  & > a:nth-of-type(3):hover .navBar__linkedInHover
+    opacity: 1
+    pointer-events: auto
+
+.navBar__logoLink
+  width: 90%
+  height: 90%
+  
+.index__home
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  width: 100%
+  height: 100vh
+  padding-left: 192px
+  background-image: url(../public/background.png)
+  position: relative
+
+.index__homeSvg1, .index__homeSvg2
+  position: absolute
+  width: 48px
+  height: 48px
+
+.index__homeSvg1
+  top: 64px
+  left: 256px
+  border-left: 1px solid white
+  border-top: 1px solid white
+
+.index__homeSvg2
+  bottom: 64px
+  right: 64px
+  border-right: 1px solid white
+  border-bottom: 1px solid white
+
+.index__homeTitle
+  color: #fff
+  font-size: 48px
+  margin: 70px 0 0 82px
+
+.index__homeMain
+  width: calc(100% - 192px)
+  height: calc(100% - 200px)
+  padding: 16px 0 0 72px
+
+.index__homeMotto
+  color: white
+  font-size: 32px
+  margin: 0 0 88px 82px
+
+.index__homeText
+  font-size: 2em
   color: white
   font-weight: bold
-  font-size: 4em
-
