--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,13 +1,12 @@
-html,
-body
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap')
+
+*
   padding: 0
   margin: 0
-  font-family: Roboto, Arial, Helvetica, sans-serif
-  background-color: #fff
+  font-family: "Roboto Mono", Arial, Helvetica, sans-serif
+  box-sizing: border-box
 
 a
   color: inherit
   text-decoration: none
 
-*
-  box-sizing: border-box
