added cms, loading screen, fullpage

--- a/pages/components/style/BackgroundGrid.sass
+++ b/pages/components/style/BackgroundGrid.sass
@@ -1,8 +1,7 @@
 .backgroundGrid
   width: 100%
   height: 100vh
-  position: fixed
-  padding-left: 192px
+  position: absolute
   top: 0
   left: 0
   display: flex
