--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -14,7 +14,7 @@
   align-items: center
   justify-content: space-between
   width: 192px
-  height: 100%
+  height: 100vh
   background-color: #1B1E1F
 
 .navBar__activeLink
@@ -30,6 +30,7 @@
   flex-direction: column
   align-items: center
   width: 100%
+  list-style: none
   & > a
     display: flex
     justify-content: center
@@ -97,6 +98,8 @@
   height: 100vh
   padding-left: 192px
   background-image: url(../public/background.png)
+  background-repeat: no-repeat
+  background-size: cover
   position: relative
 
 .index__homeSvg1, .index__homeSvg2
@@ -106,13 +109,13 @@
 
 .index__homeSvg1
   top: 64px
-  left: 256px
+  left: 64px
   border-left: 1px solid white
   border-top: 1px solid white
 
 .index__homeSvg2
   bottom: 64px
-  right: 64px
+  right: 256px
   border-right: 1px solid white
   border-bottom: 1px solid white
 
